--- a/main.html
+++ b/main.html
@@ -8,6 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>My Playlist</h2>
+	<div>
+		<ul>
+			<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA">Song1</a></li>
+			<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY ">Song2</a></li>
+			<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">Song3</a></li>
+			<li><a href=" https://www.youtube.com/watch?v=puKD3nkB1h4">Song4</a></li>
+			<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">Song5</a></li>
+		</ul>
+	</div>	
+	<div>
+		<h3>Now Playing...</h3>
+	</div>
+	<div class="player_two">
+		<video class="video" controls
+					<source src=" https://www.w3schools.com/tags/movie.mp4">>
+				</video>
+		<h1 align="center">MP3 songs</h1>
+			    <h4 align="left">Maan Meri Jaan</h4>
+			<audio  align="center" controls 
+			    <h1>MP3 songs</h1>
+			    <h4>Maan Meri Jaan</h4>
+			   <audio  align="center" controls 
+				<source src="https://www.pagalworld.com.se/files/download/id/64630">
+
+				</audio>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
