--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>My Playlist</h2>
-	<div>
+	<h1>My Playlist</h1>
+	<div class="player_one">
 		<ul>
-			<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA">Song1</a></li>
-			<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY ">Song2</a></li>
-			<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">Song3</a></li>
-			<li><a href=" https://www.youtube.com/watch?v=puKD3nkB1h4">Song4</a></li>
-			<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">Song5</a></li>
+			<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">Song1</a></li>
+			<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song2</a></li>
+			<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">Song3</a></li>
+			<li><a href=" https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">Song4</a></li>
+			<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song5</a></li>
 		</ul>
 	</div>	
 	<div>
@@ -23,14 +23,14 @@
 	</div>
 	<div class="player_two">
 		<video class="video" controls
-					<source src=" https://www.w3schools.com/tags/movie.mp4">>
+		<source src=" https://www.w3schools.com/tags/movie.mp4">>
 				</video>
 		<h1 align="center">MP3 songs</h1>
 			    <h4 align="left">Maan Meri Jaan</h4>
-			<audio  align="center" controls 
+			<audio  align="center" controls> 
 			    <h1>MP3 songs</h1>
 			    <h4>Maan Meri Jaan</h4>
-			   <audio  align="center" controls 
+			   <audio  align="center" controls> 
 				<source src="https://www.pagalworld.com.se/files/download/id/64630">
 
 				</audio>
