--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
 		</ul>
 	</div>	
 	<div>
-		<h3>Now Playing...</h3>
+		<h2>Now Playing...</h2>
 	</div>
 	<div class="player_two">
-		<video class="video" controls
+		<video class="video" controls>
 		<source src=" https://www.w3schools.com/tags/movie.mp4">>
 				</video>
 		<h1 align="center">MP3 songs</h1>
