--- a/main.html
+++ b/main.html
@@ -22,15 +22,15 @@
 		<h2>Now Playing...</h2>
 	</div>
 	<div class="player_two">
-		<video class="video" controls>
+		<video controls>
 		<source src=" https://www.w3schools.com/tags/movie.mp4">>
 				</video>
 		<h1 align="center">MP3 songs</h1>
 			    <h4 align="left">Maan Meri Jaan</h4>
-			<audio  align="center" controls> 
+			<audio controls> 
 			    <h1>MP3 songs</h1>
 			    <h4>Maan Meri Jaan</h4>
-			   <audio  align="center" controls> 
+			   <audio controls> 
 				<source src="https://www.pagalworld.com.se/files/download/id/64630">
 
 				</audio>
