--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		</ul>
 	</div>	
 	<div>
-		<h2>Now Playing...</h2>
+		<h2 style="text-align:center">Now Playing...</h2>
 	</div>
 	<div class="player_two">
 		<video controls>
@@ -27,7 +27,7 @@
 		</video>
 		<h1 align="center">MP3 songs</h1>
 			    <h4>Maan Meri Jaan</h4>
-			   <audio src="https://www.pagalworld.com.se/files/download/id/64630" controls>
+			   <audio src="https://www.pagalworld.com.se/files/download/id/64630.mp3" controls>
 <!--                   </audio> -->
 	</div>
     <script type="text/javascript" src="./script.js">
