--- a/main.html
+++ b/main.html
@@ -23,11 +23,11 @@
 	</div>
 	<div class="player_two">
 		<video controls>
-		   <source src=" https://www.w3schools.com/tags/movie.mp4">>
+		   <source src=" https://www.w3schools.com/tags/movie.mp4"  type="video/mp4">
 		</video>
 		<h1 align="center">MP3 songs</h1>
 			    <h4>Maan Meri Jaan</h4>
-			   <audio src="https://www.pagalworld.com.se/files/download/id/64630.mp3" controls>
+			   <audio src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3" controls>
 <!--                   </audio> -->
 	</div>
     <script type="text/javascript" src="./script.js">
