--- a/main.html
+++ b/main.html
@@ -27,8 +27,9 @@
 		</video>
 		<h2 align="center">MP3 songs</h2>
 			    <h4>Maan Meri Jaan</h4>
-			   <audio src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3" controls>
-<!--                   </audio> -->
+			   <audio controls> 
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+                  </audio>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
